# deployments

./: .gitignore  .helmdocsignore  .pre-commit-config.yaml  .release-please-manifest.json  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  release-images.json  release-please-config.json  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.commit.check.yml  ci.linting.yml  docs.yml  release-images.yml  release-please.yml
applications/firefly/: manifest.yaml
configs/kueue/dev/: clusterQueue.config.yaml
configs/kueue/docs/: README.md  architecture.md  operations.md  reportstyle.markdown  roadmap.md  ui-spec.md
docs/: CONTRIBUTING.md  index.md
docs/helm/: canfar.md  index.md  skaha.md
docs/operations/: ci-cd.md  helm-charts.md  index.md  release-cycle.md  release-process.md
helm/: index.html
helm/applications/: skaha-1.6.0.tgz  skaha-1.6.0.tgz.prov  skaha-1.6.1.tgz  skaha-1.6.1.tgz.prov
helm/base/: index.html
helm/canfar/: index.html
helm/cavern/: index.html
helm/common/: CHANGELOG.md
helm/core/: index.html
helm/posix-mapper/: index.html
helm/science-platform/: index.html
helm/science-portal/: index.html
helm/skaha/: index.html
helm/sshd/: index.html
helm/storage-ui/: index.html
helm/utils/: index.html
operations/: index.html
operations/ci-cd/: index.html
operations/release-process/: index.html
scripts/: generate_release_matrix.py
search/: search_index.json
src/deployments/: release_matrix.py
src/scripts/: helm-dependency-update.sh
tests/: test_release_matrix.py
(+471 files in other folders)
